--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -3,15 +3,17 @@
 
 ANTHROPIC_API_KEY=sk-ant-...
 
-# Required for local dev - enables LAN binding (0.0.0.0) for Docker networking
-# and allows insecure auth for the Control UI
-CLAWDBOT_DEV_MODE=false
+# Local development mode - skips Cloudflare Access auth and bypasses device pairing
+DEV_MODE=true
+
+# Enable debug routes at /debug/* (optional)
+DEBUG_ROUTES=true
 
 # Optional - set a fixed token instead of auto-generated
 CLAWDBOT_GATEWAY_TOKEN=dev-token-change-in-prod
 
 # Cloudflare Access configuration for /_admin and /api routes
-# Required for admin UI and device pairing API
+# Required for admin UI and device pairing API in production
 # CF_ACCESS_TEAM_DOMAIN=myteam.cloudflareaccess.com
 # CF_ACCESS_AUD=your-application-audience-tag
 
