--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -37,7 +37,8 @@
     {
       "class_name": "Sandbox",
       "image": "./Dockerfile",
-      "instance_type": "standard-3",
+      "instance_type": "standard-4",
+      "max_instances": 1,
     },
   ],
   "durable_objects": {
